this is an update to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Google</title>
+<title>Google-homepage</title>
 <html>
     <head>
     <link rel="stylesheet" type="text/css" href="style.css">
